Fixed border radius
Fixed botom border radius not showing properly on about section and team section

--- a/style.css
+++ b/style.css
@@ -213,8 +213,8 @@ header {
 }
 .about {
     max-width: 100%;
-    min-height: 40rem;
-    text-align: center;
+    min-height: 45rem;
+    text-align: center;;
 }
 .about-cards {
     display: flex;
@@ -300,22 +300,22 @@ header {
     .ux {
         background-image: url(images/ux.png);
         background-repeat: no-repeat;
-        background-size: 300px 420px;
+        background-size: 310px 420px;
     }
     .mobile {
         background-image: url(images/mobile.png);
         background-repeat: no-repeat;
-        background-size: 300px 420px;
+        background-size: 310px 420px;
     }
     .marketing {
         background-image: url(images/marketing.png);
         background-repeat: no-repeat;
-        background-size: 300px 420px;
+        background-size: 310px 420px;
     }
     .development {
         background-image: url(images/development.png);
         background-repeat: no-repeat;
-        background-size: 300px 420px;
+        background-size: 310px 420px;
     }
 }
 .jobs {
@@ -554,8 +554,6 @@ footer {
     max-width: 1536px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
     border: 1px solid red;
 }
 
